# libevm

./: .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  README.md  go.mod
accounts/: BUILD.bazel  accounts.go  manager.go
accounts/abi/: BUILD.bazel  abi.go  abi_test.go  event_test.go  pack_test.go  selector.libevm.go  topics.go  topics_test.go  type.go  type_test.go  unpack_test.go
accounts/keystore/: BUILD.bazel  account_cache.go  account_cache_test.go  keystore.go  keystore_test.go
accounts/scwallet/: BUILD.bazel  hub.go  securechannel.go  wallet.go
accounts/usbwallet/: BUILD.bazel  hub.go  ledger.go  trezor.go  wallet.go
beacon/engine/: BUILD.bazel  gen_ed.go  gen_epe.go  types.go
beacon/light/: BUILD.bazel  committee_chain.go  committee_chain_test.go  head_tracker.go  test_helpers.go
beacon/types/: BUILD.bazel  beacon_block.go  beacon_block_test.go  exec_header.go  exec_payload.go  header.go  light_sync.go
cmd/abidump/: BUILD.bazel
common/: BUILD.bazel  types.go
common/bitutil/: BUILD.bazel
common/compiler/: BUILD.bazel
common/fdlimit/: BUILD.bazel
common/hexutil/: BUILD.bazel
common/lru/: BUILD.bazel  lru.go
common/math/: BUILD.bazel
common/mclock/: BUILD.bazel
common/prque/: BUILD.bazel  lazyqueue.go
consensus/: BUILD.bazel  consensus.go
consensus/beacon/: BUILD.bazel  consensus.go
consensus/clique/: BUILD.bazel  api.go  clique.go  clique_test.go  snapshot.go  snapshot_test.go
consensus/ethash/: BUILD.bazel  consensus.go  ethash.go
consensus/misc/: BUILD.bazel  dao.go
console/: BUILD.bazel  bridge.go  console.go  console_test.go
console/prompt/: BUILD.bazel
core/: BUILD.bazel  bench_test.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_insert.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_snapshot_test.go  blockchain_test.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  dao_test.go  error.go  events.go  evm.go  genesis.go  genesis_test.go  headerchain.go  headerchain_test.go  mkalloc.go  rlp_test.go  sender_cacher.go  state_prefetcher.go  state_processor.go  state_processor_test.go  state_transition.go  state_transition.libevm.go  stateless.go  txindexer.go  txindexer_test.go  types.go  verkle_witness_test.go
core/asm/: BUILD.bazel  asm.go
core/bloombits/: BUILD.bazel  matcher.go
core/forkid/: BUILD.bazel  forkid.go  forkid_test.go
core/rawdb/: BUILD.bazel  accessors_chain.go  accessors_chain_test.go  accessors_indexes_test.go  accessors_snapshot.go  accessors_trie.go  ancient_scheme.go  ancient_utils.go  chain_freezer.go  chain_iterator_test.go  database.go  database.libevm.go  database.libevm_test.go  freezer.go  freezer_batch.go  freezer_memory.go  freezer_memory_test.go  freezer_meta.go  freezer_meta_test.go  freezer_resettable.go  freezer_resettable_test.go  freezer_table.go  freezer_table_test.go  freezer_test.go  schema.go  table.go
core/state/: BUILD.bazel  access_events.go  access_events_test.go  access_list.go  database.go  dump.go  iterator.go  iterator_test.go  journal.go  metrics.go  opts.libevm.go  reader.go  state.libevm.go  state.libevm_test.go  state_object.go  state_object.libevm_test.go  state_test.go  statedb.go  statedb.libevm.go  statedb.libevm_test.go  statedb_fuzz_test.go  statedb_hooked.go  statedb_hooked_test.go  statedb_test.go  stateupdate.go  sync_test.go  transient_storage.go  trie_prefetcher.go  trie_prefetcher.libevm.go  trie_prefetcher.libevm_test.go  trie_prefetcher_test.go
core/stateless/: database.go  encoding.go  witness.go
core/tracing/: hooks.go  journal.go  journal_test.go
core/txpool/: BUILD.bazel  subpool.go  txpool.go  (+1 more)
crypto/: BUILD.bazel  crypto.go  signature_cgo.go  signature_test.go
eth/: BUILD.bazel  api_backend.go  api_debug.go  api_debug_test.go  api_miner.go  backend.go  handler.go  handler_eth.go  handler_eth_test.go  handler_test.go  peerset.go  state_accessor.go  sync.go  sync_test.go
ethclient/: BUILD.bazel  ethclient.go  ethclient_test.go  example_test.go  types_test.go
ethstats/: BUILD.bazel  ethstats.go
event/: BUILD.bazel
graphql/: BUILD.bazel  graphql.go  graphql_test.go
libevm/: BUILD.bazel  README.md
log/: BUILD.bazel
metrics/: BUILD.bazel  counter.go  counter.libevm.go  counter_float64.go  cpu_enabled.go  cputime_unix.go  gauge.go  gauge_float64.go  gauge_info.go  histogram.go  opentsdb.go  resetting_timer.go  timer.go
miner/: BUILD.bazel  blockbuilder.libevm.go  blockbuilder.libevm_test.go  miner.go  miner_test.go  payload_building.go  payload_building_test.go  pending.go  worker.go
node/: BUILD.bazel  api.go  api_test.go  config.go  database.go  node.go  node_auth_test.go  node_test.go  rpcstack.go  rpcstack_test.go
p2p/: BUILD.bazel  config.go  config_toml.go  dial.go  dial_test.go  metrics.go  peer.go  peer_test.go  protocol.go  server.go  server_nat.go  server_nat_test.go  transport.go  transport_test.go
params/: BUILD.bazel  bootnodes.go  config.go  config.libevm.go  config.libevm_test.go  example.libevm_test.go  hooks.libevm.go  hooks.libevm_test.go  json.libevm.go  json.libevm_test.go  protocol_params.go  version.libevm.go  version.libevm_test.go
rlp/: BUILD.bazel  decode.go  decode_test.go  encode.go  fields.libevm_test.go  tree.libevm.go  tree.libevm_test.go  tree_encode.libevm.go  typecache.go
tests/: BUILD.bazel  block_test.go  block_test_util.go  difficulty_test.go  gen_stauthorization.go  gen_sttransaction.go  init.go  init_test.go  state_test.go  state_test_util.go  transaction_test.go  transaction_test_util.go
trie/: BUILD.bazel  committer.go  database_test.go  errors.go  hasher.go  iterator.go  iterator_test.go  node.go  node_enc.go  proof.go  proof_test.go  secure_trie.go  secure_trie_test.go  stacktrie.go  stacktrie_fuzzer_test.go  stacktrie_test.go  sync.go  sync_test.go  tracer.go  tracer_test.go  trie.go  trie_id.go  trie_reader.go  trie_test.go  verkle.go  verkle_test.go
triedb/: BUILD.bazel  database.go  database.libevm.go  database.libevm_test.go  database_test.go  history.go  states.go
(+613 files in other folders)
