load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "block_validator.go",
        "blockchain.go",
        "blockchain_insert.go",
        "blockchain_reader.go",
        "blocks.go",
        "bloom_indexer.go",
        "chain_indexer.go",
        "chain_makers.go",
        "error.go",
        "events.go",
        "evm.go",
        "forkchoice.go",
        "gaspool.go",
        "gen_genesis.go",
        "genesis.go",
        "genesis_alloc.go",
        "headerchain.go",
        "sender_cacher.go",
        "state_prefetcher.go",
        "state_processor.go",
        "state_transition.go",
        "state_transition.libevm.go",
        "txindexer.go",
        "types.go",
    ],
    importpath = "github.com/ava-labs/libevm/core",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/bitutil",
        "//common/hexutil",
        "//common/lru",
        "//common/math",
        "//common/mclock",
        "//common/prque",
        "//consensus",
        "//consensus/misc",
        "//consensus/misc/eip1559",
        "//consensus/misc/eip4844",
        "//core/bloombits",
        "//core/rawdb",
        "//core/state",
        "//core/state/snapshot",
        "//core/types",
        "//core/vm",
        "//crypto",
        "//crypto/kzg4844",
        "//ethdb",
        "//event",
        "//internal/syncx",
        "//internal/version",
        "//log",
        "//metrics",
        "//params",
        "//rlp",
        "//trie",
        "//triedb",
        "//triedb/hashdb",
        "//triedb/pathdb",
        "@com_github_holiman_uint256//:uint256",
        "@org_golang_x_exp//slices",
    ],
)

go_test(
    name = "core_test",
    timeout = "long",
    srcs = [
        "bench_test.go",
        "block_validator_test.go",
        "blockchain_repair_test.go",
        "blockchain_sethead_test.go",
        "blockchain_snapshot_test.go",
        "blockchain_test.go",
        "chain_indexer_test.go",
        "chain_makers_test.go",
        "dao_test.go",
        "genesis_test.go",
        "headerchain_test.go",
        "rlp_test.go",
        "state_processor_test.go",
        "state_transition.libevm_test.go",
        "txindexer_test.go",
    ],
    embed = [":core"],
    deps = [
        "//common",
        "//common/math",
        "//consensus",
        "//consensus/beacon",
        "//consensus/clique",
        "//consensus/ethash",
        "//consensus/misc/eip1559",
        "//consensus/misc/eip4844",
        "//core/rawdb",
        "//core/state",
        "//core/types",
        "//core/vm",
        "//crypto",
        "//eth/tracers/logger",
        "//ethdb",
        "//libevm",
        "//libevm/ethtest",
        "//libevm/hookstest",
        "//params",
        "//rlp",
        "//trie",
        "//triedb",
        "//triedb/hashdb",
        "//triedb/pathdb",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_holiman_uint256//:uint256",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_crypto//sha3",
    ],
)
