load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crypto",
    srcs = [
        "crypto.go",
        "signature_cgo.go",
        "signature_nocgo.go",
    ],
    importpath = "github.com/ava-labs/libevm/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/math",
        "//rlp",
        "@org_golang_x_crypto//sha3",
    ] + select({
        "@rules_go//go/platform:aix": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:android": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:darwin": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:dragonfly": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:freebsd": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:illumos": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:ios": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:js": [
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:linux": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:netbsd": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:openbsd": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:osx": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:plan9": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:qnx": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:solaris": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "@rules_go//go/platform:windows": [
            "//crypto/secp256k1",
            "@com_github_btcsuite_btcd_btcec_v2//:btcec",
            "@com_github_btcsuite_btcd_btcec_v2//ecdsa",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "crypto_test",
    srcs = [
        "crypto_test.go",
        "signature_test.go",
    ],
    embed = [":crypto"],
    deps = [
        "//common",
        "//common/hexutil",
        "//common/math",
    ],
)
