load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eth",
    srcs = [
        "api.go",
        "api_admin.go",
        "api_backend.go",
        "api_debug.go",
        "api_miner.go",
        "backend.go",
        "bloombits.go",
        "handler.go",
        "handler_eth.go",
        "handler_snap.go",
        "peer.go",
        "peerset.go",
        "state_accessor.go",
        "sync.go",
    ],
    importpath = "github.com/ava-labs/libevm/eth",
    visibility = ["//visibility:public"],
    deps = [
        "//:libevm",
        "//accounts",
        "//common",
        "//common/bitutil",
        "//common/hexutil",
        "//consensus",
        "//consensus/beacon",
        "//consensus/clique",
        "//core",
        "//core/bloombits",
        "//core/forkid",
        "//core/rawdb",
        "//core/state",
        "//core/state/pruner",
        "//core/txpool",
        "//core/txpool/blobpool",
        "//core/txpool/legacypool",
        "//core/types",
        "//core/vm",
        "//crypto",
        "//eth/downloader",
        "//eth/ethconfig",
        "//eth/fetcher",
        "//eth/gasprice",
        "//eth/protocols/eth",
        "//eth/protocols/snap",
        "//eth/tracers",
        "//ethdb",
        "//event",
        "//internal/ethapi",
        "//internal/shutdowncheck",
        "//log",
        "//metrics",
        "//miner",
        "//node",
        "//p2p",
        "//p2p/dnsdisc",
        "//p2p/enode",
        "//params",
        "//rlp",
        "//rpc",
        "//trie",
        "//triedb",
        "//triedb/pathdb",
    ],
)

go_test(
    name = "eth_test",
    srcs = [
        "api_debug_test.go",
        "handler_eth_test.go",
        "handler_test.go",
        "sync_test.go",
    ],
    embed = [":eth"],
    deps = [
        "//common",
        "//consensus",
        "//consensus/ethash",
        "//core",
        "//core/forkid",
        "//core/rawdb",
        "//core/state",
        "//core/txpool",
        "//core/types",
        "//core/vm",
        "//crypto",
        "//eth/downloader",
        "//eth/protocols/eth",
        "//eth/protocols/snap",
        "//ethdb",
        "//event",
        "//p2p",
        "//p2p/enode",
        "//params",
        "//triedb",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_holiman_uint256//:uint256",
        "@org_golang_x_exp//slices",
    ],
)
