load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "miner",
    srcs = [
        "miner.go",
        "ordering.go",
        "payload_building.go",
        "worker.go",
    ],
    importpath = "github.com/ava-labs/libevm/miner",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon/engine",
        "//common",
        "//common/hexutil",
        "//consensus",
        "//consensus/misc/eip1559",
        "//consensus/misc/eip4844",
        "//core",
        "//core/state",
        "//core/txpool",
        "//core/types",
        "//core/vm",
        "//eth/downloader",
        "//event",
        "//log",
        "//params",
        "//rlp",
        "//trie",
        "@com_github_holiman_uint256//:uint256",
    ],
)

go_test(
    name = "miner_test",
    srcs = [
        "miner_test.go",
        "ordering_test.go",
        "payload_building_test.go",
        "worker_test.go",
    ],
    embed = [":miner"],
    deps = [
        "//accounts",
        "//beacon/engine",
        "//common",
        "//consensus",
        "//consensus/clique",
        "//consensus/ethash",
        "//core",
        "//core/rawdb",
        "//core/state",
        "//core/txpool",
        "//core/txpool/legacypool",
        "//core/types",
        "//core/vm",
        "//crypto",
        "//eth/downloader",
        "//ethdb",
        "//event",
        "//params",
        "//trie",
        "//triedb",
        "@com_github_holiman_uint256//:uint256",
    ],
)
