load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "node",
    srcs = [
        "api.go",
        "config.go",
        "defaults.go",
        "doc.go",
        "endpoints.go",
        "errors.go",
        "jwt_auth.go",
        "jwt_handler.go",
        "lifecycle.go",
        "node.go",
        "rpcstack.go",
    ],
    importpath = "github.com/ava-labs/libevm/node",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts",
        "//common",
        "//common/hexutil",
        "//core/rawdb",
        "//crypto",
        "//ethdb",
        "//event",
        "//internal/debug",
        "//log",
        "//p2p",
        "//p2p/enode",
        "//p2p/nat",
        "//rpc",
        "@com_github_gofrs_flock//:flock",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_rs_cors//:cors",
    ],
)

go_test(
    name = "node_test",
    srcs = [
        "api_test.go",
        "config_test.go",
        "node_auth_test.go",
        "node_example_test.go",
        "node_test.go",
        "rpcstack_test.go",
        "utils_test.go",
    ],
    embed = [":node"],
    deps = [
        "//common/hexutil",
        "//crypto",
        "//ethdb",
        "//internal/testlog",
        "//log",
        "//p2p",
        "//rpc",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_stretchr_testify//assert",
    ],
)
