load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tests",
    srcs = [
        "block_test_util.go",
        "difficulty_test_util.go",
        "gen_btheader.go",
        "gen_difficultytest.go",
        "gen_stenv.go",
        "gen_sttransaction.go",
        "init.go",
        "rlp_test_util.go",
        "state_test_util.go",
        "transaction_test_util.go",
    ],
    importpath = "github.com/ava-labs/libevm/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/hexutil",
        "//common/math",
        "//consensus/beacon",
        "//consensus/ethash",
        "//consensus/misc/eip4844",
        "//core",
        "//core/rawdb",
        "//core/state",
        "//core/state/snapshot",
        "//core/types",
        "//core/vm",
        "//crypto",
        "//ethdb",
        "//log",
        "//params",
        "//rlp",
        "//triedb",
        "//triedb/hashdb",
        "//triedb/pathdb",
        "@com_github_holiman_uint256//:uint256",
        "@org_golang_x_crypto//sha3",
    ],
)

go_test(
    name = "tests_test",
    srcs = [
        "block_test.go",
        "difficulty_test.go",
        "init_test.go",
        "rlp_test.go",
        "state_test.go",
        "transaction_test.go",
    ],
    data = glob(
        ["testdata/**"],
        allow_empty = True,
    ),
    embed = [":tests"],
    deps = [
        "//common",
        "//core",
        "//core/rawdb",
        "//core/types",
        "//core/vm",
        "//eth/tracers/logger",
        "//params",
        "@com_github_holiman_uint256//:uint256",
    ],
)
