load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trie",
    srcs = [
        "committer.go",
        "encoding.go",
        "errors.go",
        "hasher.go",
        "iterator.go",
        "node.go",
        "node_enc.go",
        "proof.go",
        "secure_trie.go",
        "stacktrie.go",
        "sync.go",
        "tracer.go",
        "trie.go",
        "trie_id.go",
        "trie_reader.go",
        "verkle.go",
    ],
    importpath = "github.com/ava-labs/libevm/trie",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/prque",
        "//core/rawdb",
        "//core/types",
        "//crypto",
        "//ethdb",
        "//log",
        "//metrics",
        "//rlp",
        "//trie/trienode",
        "//trie/triestate",
        "//trie/utils",
        "//triedb/database",
        "@com_github_gballet_go_verkle//:go-verkle",
        "@com_github_holiman_uint256//:uint256",
        "@org_golang_x_crypto//sha3",
    ],
)

go_test(
    name = "trie_test",
    srcs = [
        "database_test.go",
        "encoding_test.go",
        "iterator_test.go",
        "node_test.go",
        "proof_test.go",
        "secure_trie_test.go",
        "stacktrie_fuzzer_test.go",
        "stacktrie_test.go",
        "sync_test.go",
        "tracer_test.go",
        "trie_test.go",
        "verkle_test.go",
    ],
    embed = [":trie"],
    deps = [
        "//common",
        "//core/rawdb",
        "//core/types",
        "//crypto",
        "//ethdb",
        "//ethdb/memorydb",
        "//rlp",
        "//trie/testutil",
        "//trie/trienode",
        "//trie/utils",
        "//triedb/database",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_holiman_uint256//:uint256",
        "@com_github_stretchr_testify//assert",
        "@org_golang_x_crypto//sha3",
        "@org_golang_x_exp//slices",
    ],
)
